<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DrawMain" 
    android:background="@color/gray" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="2dp" >

        <ImageButton
            android:id="@+id/newButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:contentDescription="@string/newButton"
            android:onClick="newDrawing"
            android:src="@drawable/newd" 
            />

        <ImageButton
            android:id="@+id/paintButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:contentDescription="@string/paintButton"
            android:onClick="paint"
            android:src="@drawable/paintcolor" />

        <ImageButton
            android:id="@+id/eraseButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:contentDescription="@string/eraseButton"
            android:onClick="erase"
            android:src="@drawable/erase" />

        <ImageButton
            android:id="@+id/fbButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:contentDescription="@string/fbButton"
            android:onClick="fb"
            android:src="@drawable/facebook" />
    </LinearLayout>
      <!--
     <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:height="50dp" >

    </FrameLayout>

   -->
    <mobile.example.drawfree.DrawingPanel 
 		android:id="@+id/drawing" 
 		android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:height="50dp" 
 	/> 
      

    <LinearLayout
		android:id="@+id/colorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical" >

        <ImageButton
            android:id="@+id/brownButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:contentDescription="@string/brownButton"
            android:onClick="paintClicked"
            android:tag="#FFB97A57"
            android:src="@drawable/brown" />

        <ImageButton
            android:id="@+id/redButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:contentDescription="@string/redButton"
            android:onClick="paintClicked"
            android:tag="#FFFF0000"
            android:src="@drawable/red"/>
        
         <ImageButton
            android:id="@+id/yellowButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:contentDescription="@string/yellowButton"
            android:onClick="paintClicked"
            android:tag="#FFFFFF00"
            android:src="@drawable/yellow" />
         
		<ImageButton
            android:id="@+id/greenButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:contentDescription="@string/greenButton"
            android:onClick="paintClicked"
            android:tag="#FF5CA262"
            android:src="@drawable/green" />


        <ImageButton
            android:id="@+id/blueButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:contentDescription="@string/blueButton"
            android:onClick="paintClicked"
            android:tag="#FF019FE6"
            android:src="@drawable/blue" />

        <ImageButton
            android:id="@+id/blackButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:contentDescription="@string/blackButton"
            android:onClick="paintClicked"
            android:tag="#FF000000"
            android:src="@drawable/black" />
    </LinearLayout>

</LinearLayout>